<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/alex_brush"
                android:includeFontPadding="false"
                android:text="@string/appName"
                android:textSize="48sp" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/settingButton"
                tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="match_parent" >

            </ListView>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/createNewGoalButton"
                android:focusable="true"
                app:srcCompat="@android:drawable/ic_input_add" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>